@@ -36,6 +36,8 @@ Package org.springframework.webflow.engine
 * The XmlFlowBuilder now also supports OGNL expressions in the "to" attribute of a transition
   when using the "on-exception" attribute (SWF-269).
 * The XmlFlowBuilder now consistently uses "fromStringTo(Class.class)" to resolve types (SWF-268).
+* Added AbstractFlowBuilderFlowRegistryFactoryBean for easy setup of a flow registry containing
+  flows built using AbstractFlowBuilders.
 
 Package org.springframework.webflow.execution
 * Added FlowExecutionListener.sessionCreated(RequestContext, FlowSession) callback, useful for
